# python-template

./: .envrc  .gitignore  .pre-commit-config.yaml  prek.toml  pyproject.toml  requirements-dev.txt
